// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` component Should render the  component 1`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <div
      class="o-shell c-shell-test"
    >
      <header
        class="c-section__header"
      >
        <div />
        <h2>
          Test title
        </h2>
        <h3>
          Test subtitle
        </h3>
      </header>
      <h1>
        This is a test title
      </h1>
      <div
        class="c-section__actions"
      >
        <button
          class="css-8n53dr-Button"
          type="button"
        >
          Get in touch
        </button>
        <ul
          class="c-section__actions-list"
        >
          <li>
            <button
              class="css-8n53dr-Button"
              type="button"
            >
              Close
            </button>
          </li>
          <li>
            <button
              class="css-8n53dr-Button"
              type="button"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-email"
                />
              </svg>
              <span>
                Contact me
              </span>
              <strong>
                directly
              </strong>
            </button>
          </li>
          <li>
            <a
              class="css-8n53dr-Button"
              href="https://app.usebraintrust.com/talent/782/"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-braintrust"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Braintrust
              </strong>
            </a>
          </li>
          <li>
            <a
              class="css-8n53dr-Button"
              href="https://www.toptal.com/resume/atanas-atanasov"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-toptal"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Toptal
              </strong>
            </a>
          </li>
        </ul>
        <br
          class="visible-xs-block"
        />
        <div />
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[` component Should render the  component 2`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <div
      class="o-shell c-shell-test"
    >
      <header
        class="c-section__header"
      >
        <div />
        <h3>
          Test subtitle
        </h3>
      </header>
      <h1>
        This is a test title
      </h1>
    </div>
  </section>
</DocumentFragment>
`;

exports[` component Should render the  component 3`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <h1>
      This is a test title
    </h1>
  </section>
</DocumentFragment>
`;

exports[` component Should render the  component 4`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <h1>
      This is a test title
    </h1>
    <div
      class="c-section__actions"
    >
      <button
        class="css-8n53dr-Button"
        type="button"
      >
        Get in touch
      </button>
      <ul
        class="c-section__actions-list"
      >
        <li>
          <button
            class="css-8n53dr-Button"
            type="button"
          >
            Close
          </button>
        </li>
        <li>
          <button
            class="css-8n53dr-Button"
            type="button"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-email"
              />
            </svg>
            <span>
              Contact me
            </span>
            <strong>
              directly
            </strong>
          </button>
        </li>
        <li>
          <a
            class="css-8n53dr-Button"
            href="https://app.usebraintrust.com/talent/782/"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-braintrust"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Braintrust
            </strong>
          </a>
        </li>
        <li>
          <a
            class="css-8n53dr-Button"
            href="https://www.toptal.com/resume/atanas-atanasov"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-toptal"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Toptal
            </strong>
          </a>
        </li>
      </ul>
      <br
        class="visible-xs-block"
      />
      <div />
    </div>
  </section>
</DocumentFragment>
`;

exports[` component Should render the  component 5`] = `
<DocumentFragment>
  <nav
    class="c-section__nav"
  >
    <ul>
      <li
        class="current"
      >
        <button
          aria-label="Switch to Do more with Sublime Text"
          class="css-8n53dr-Button"
          type="button"
        >
          Do more with Sublime Text
        </button>
      </li>
      <li>
        <button
          aria-label="Switch to Jarvis: Frontend project setup"
          class="css-8n53dr-Button"
          type="button"
        >
          Jarvis: Frontend project setup
        </button>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[` component Should render the  component 6`] = `
<DocumentFragment>
  <div
    class="c-section__grid o-grid"
  >
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/github"
        style="background-image: url(/images/temp/github.jpg);"
      >
        <strong>
          Github
        </strong>
      </a>
      <div
        class="css-9g2z7l-Loader"
      >
        <div
          class="css-1o0ykwt-Loader"
        />
      </div>
    </div>
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/gitlab"
        style="background-image: url(/images/temp/gitlab.jpg);"
      >
        <strong>
          Gitlab
        </strong>
      </a>
      <div
        class="css-9g2z7l-Loader"
      >
        <div
          class="css-1o0ykwt-Loader"
        />
      </div>
    </div>
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/npm"
        style="background-image: url(/images/temp/npm.jpg);"
      >
        <strong>
          NPM
        </strong>
      </a>
      <div
        class="css-9g2z7l-Loader"
      >
        <div
          class="css-1o0ykwt-Loader"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[` component Should render the  component 7`] = `
<DocumentFragment>
  <div
    class="c-section__grid o-grid"
  >
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/github"
        style="background-image: url(/images/temp/github.jpg);"
      >
        <strong>
          Github
        </strong>
      </a>
      <div
        class="css-9g2z7l-Loader"
      >
        <div
          class="css-1o0ykwt-Loader"
        />
      </div>
    </div>
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/gitlab"
        style="background-image: url(/images/temp/gitlab.jpg);"
      >
        <strong>
          Gitlab
        </strong>
      </a>
      <div
        class="css-9g2z7l-Loader"
      >
        <div
          class="css-1o0ykwt-Loader"
        />
      </div>
    </div>
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/npm"
        style="background-image: url(/images/temp/npm.jpg);"
      >
        <strong>
          NPM
        </strong>
      </a>
      <div
        class="css-9g2z7l-Loader"
      >
        <div
          class="css-1o0ykwt-Loader"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[` component Should render the  component 8`] = `
<DocumentFragment>
  <div
    class="c-section__grid o-grid"
  >
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/github"
        rel="noopener noreferrer"
        style="background-image: url(/images/temp/github.jpg);"
        target="_blank"
      >
        <strong>
          Github
        </strong>
        <svg
          class="c-svg-external-link"
        >
          <use
            xlink:href="#svg-external-link"
          />
        </svg>
      </a>
      <div
        class="css-9g2z7l-Loader"
      >
        <div
          class="css-1o0ykwt-Loader"
        />
      </div>
    </div>
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/gitlab"
        rel="noopener noreferrer"
        style="background-image: url(/images/temp/gitlab.jpg);"
        target="_blank"
      >
        <strong>
          Gitlab
        </strong>
        <svg
          class="c-svg-external-link"
        >
          <use
            xlink:href="#svg-external-link"
          />
        </svg>
      </a>
      <div
        class="css-9g2z7l-Loader"
      >
        <div
          class="css-1o0ykwt-Loader"
        />
      </div>
    </div>
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/npm"
        rel="noopener noreferrer"
        style="background-image: url(/images/temp/npm.jpg);"
        target="_blank"
      >
        <strong>
          NPM
        </strong>
        <svg
          class="c-svg-external-link"
        >
          <use
            xlink:href="#svg-external-link"
          />
        </svg>
      </a>
      <div
        class="css-9g2z7l-Loader"
      >
        <div
          class="css-1o0ykwt-Loader"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[` component Should unmount the  component 1`] = `<DocumentFragment />`;

exports[` component Should unmount the  component 2`] = `<DocumentFragment />`;

exports[` component Should unmount the  component 3`] = `<DocumentFragment />`;

exports[` component Should unmount the  component 4`] = `<DocumentFragment />`;

exports[` component Should unmount the  component 5`] = `<DocumentFragment />`;

exports[` component Should unmount the  component 6`] = `<DocumentFragment />`;

exports[` component Should unmount the  component 7`] = `<DocumentFragment />`;

exports[` component Should unmount the  component 8`] = `<DocumentFragment />`;
